--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.0",
     "axios": "^1.7.9",
     "concurrently": "^9.1.0",
     "cors": "^2.8.5",
